--- a/package.json
+++ b/package.json
@@ -18,13 +18,22 @@
   },
   "homepage": "https://github.com/Sam-Guliker/webdesign#readme",
   "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.5",
     "gulp": "^3.9.1",
+    "gulp-babel": "^7.0.1",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
     "gulp-useref": "^3.1.5"
   },
   "dependencies": {
     "gulp-cssnano": "^2.1.3"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
