--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "gulp-useref": "^3.1.5"
   },
   "dependencies": {
-    "gulp-cssnano": "^2.1.3"
+    "gulp-cssnano": "^2.1.3",
+    "virtual-dom": "^2.1.1"
   },
   "babel": {
     "presets": [
