--- a/package.json
+++ b/package.json
@@ -31,8 +31,6 @@
   },
   "dependencies": {
     "concat": "^1.0.3",
-    "gulp-cssnano": "^2.1.3",
-    "gulp-sourcemaps": "^2.6.4",
-    "virtual-dom": "^2.1.1"
+    "gulp-sourcemaps": "^2.6.4"
   }
 }
