--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "gulp-useref": "^3.1.5"
   },
   "dependencies": {
-    "concat": "^1.0.3",
-    "gulp-jsx": "^2.0.1",
-    "gulp-sourcemaps": "^2.6.4"
+    "gulp-sourcemaps": "^2.6.4",
+    "hyperhtml": "^2.11.1"
   }
 }
