--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.5",
+    "connect-history-api-fallback": "^1.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
     "gulp-sass": "^4.0.1",
