--- a/package.json
+++ b/package.json
@@ -20,19 +20,15 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-core": "^6.26.3",
-    "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "browser-sync": "^2.24.5",
     "connect-history-api-fallback": "^1.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
-    "gulp-sass": "^4.0.1",
-    "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.5"
+    "gulp-sass": "^4.0.1"
   },
   "dependencies": {
-    "gulp-sourcemaps": "^2.6.4",
     "hyperhtml": "^2.11.1"
   }
 }
