--- a/package.json
+++ b/package.json
@@ -26,9 +26,18 @@
     "connect-history-api-fallback": "^1.5.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
-    "gulp-sass": "^4.0.1"
+    "gulp-sass": "^4.0.1",
+    "gulp-uglify": "^3.0.0",
+    "gulp-useref": "^3.1.5"
   },
   "dependencies": {
-    "hyperhtml": "^2.11.1"
+    "browserify": "^16.2.2",
+    "gulp-clean-css": "^3.9.4",
+    "gulp-if": "^2.0.2",
+    "gulp-sourcemaps": "^2.6.4",
+    "gulp-typescript": "^5.0.0-alpha.3",
+    "hyperhtml": "^2.11.1",
+    "lazypipe": "^1.0.1",
+    "uniq": "^1.0.1"
   }
 }
