--- a/package.json
+++ b/package.json
@@ -22,18 +22,26 @@
     "babel-core": "^6.26.3",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-es2015-rollup": "^3.0.0",
     "browser-sync": "^2.24.5",
     "connect-history-api-fallback": "^1.5.0",
+    "del": "^3.0.0",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
+    "gulp-cache": "^1.0.2",
+    "gulp-gzip": "^1.4.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-sass": "^4.0.1",
     "gulp-uglify": "^3.0.0",
-    "gulp-useref": "^3.1.5"
+    "gulp-useref": "^3.1.5",
+    "run-sequence": "^2.2.1"
   },
   "dependencies": {
     "browserify": "^16.2.2",
     "concat": "^1.0.3",
+    "debug": "^3.1.0",
     "gulp-clean-css": "^3.9.4",
+    "gulp-cssnano": "^2.1.3",
     "gulp-if": "^2.0.2",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-typescript": "^5.0.0-alpha.3",
